<resources>
    <string name="app_name">Set</string>
    <string name="play_set">Play Set</string>
    <string name="leftcard">Left Card : %s</string>
    <string name="leftCombination">Possible: %s</string>
    <string name="replay">Replay</string>
    <string name="rule_one">➊\nThe Set consists of 81 cards\nwith 4 properties</string>
    <string name="rule_two">➋\nEach card has the properties of shape, color, number, and shade</string>
    <string name="rule_three">➌\nEach property consists of 3 types\nas shown below</string>
    <string name="rule_four">➍\nAt the start of the game,\n12 cards are set in the field</string>
    <string name="rule_five">➎\nThe player have to find 3 cards with the same or different properties</string>
    <string name="rule_six">➏\nAs shown in the example below,\nthe properties of the two cards can\'t be the same.</string>
    <string name="rule_seven">➐\nIf the set is correct,\nthe answer card will disappear\nand new 3 cards will be added</string>
    <string name="rule_eight_single_play">➑\n(Singleplay)\nIf you can\'t find the set,\nyou can reset the card in the field\nby pressing the shuffle button</string>
    <string name="rule_eight_multi_play">\n(Multiplay)\nIf the set doesn\'t exist,\npress Ⓧ button to get points.\nIf the set exists,\nyou will lose points</string>
    <string name="rule_nine">➒\nIf a set can\'t be made from cards\non the field and deck,\nthe game will end</string>
    <string name="rule_one_highlight">4 properties</string>
    <string name="rule_two_highlight">shape, color, number, and shade</string>
    <string name="rule_three_highlight">3 types</string>
    <string name="rule_four_highlight">12 cards</string>
    <string name="rule_five_highlight">same or different</string>
    <string name="rule_six_highlight">two cards can\'t be the same</string>
    <string name="rule_eight_single_play_highlight">shuffle button</string>
    <string name="rule_eight_multi_play_highlight">press Ⓧ button</string>
    <string name="continue_set">Continue</string>
    <string name="room_code">Room Code : %s</string>
    <string name="answer_btn_text">Answer</string>
    <string name="no_combination_btn_text">X</string>
    <string name="ready_btn_text">Ready</string>
    <string name="wait">Wait</string>
    <string name="ready">Ready</string>
    <string name="score_zero">0</string>
    <string name="first">1.</string>
    <string name="second">2.</string>
    <string name="third">3.</string>
    <string name="fourth">4.</string>
    <string name="game_result">Result</string>
    <string name="go_main_menu">Main menu</string>
    <string name="single_play">Singleplay</string>
    <string name="multi_play">Multiplay</string>
    <string name="play_multi">Multiplay</string>
    <string name="play_single">Singleplay</string>
    <string name="make_nickname_hint">Enter nickname</string>
    <string name="join_code_hint">Enter room code</string>
    <string name="join_game">Join Game</string>
    <string name="make_game">Make Game</string>
    <string name="new_play_title">Start a new game?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="new_game_text">When you start a new game\nyour saved data disappears</string>
    <string name="rule_btn">\?</string>
    <string name="my_profile">My Profile</string>
    <string name="logout">Logout</string>
    <string name="setting">Setting</string>
    <string name="connect_google_account">Connect\nGoogle Account</string>
    <string name="guest_login">Sign in with Guest</string>
    <string name="google_login">Sign in with Google</string>
    <string name="confirm">Confirm</string>
    <string name="set_nickname">Set nickname</string>
    <string name="friend">Friend</string>
    <string name="friend_filter">Friend Filter</string>
    <string name="friend_request">Request friend</string>
    <string name="back">Back</string>
    <string name="nickname_division">Nickname |&#160;</string>
    <string name="delete_friend">Remove Friend</string>
    <string name="invited_game">Invitation</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="invite">Invite</string>
    <string name="description_add_friend_btn">add_friend_btn</string>
    <string name="description_add_friend_cancel_btn">add_friend_cancel_btn</string>
    <string name="description_filter_btn">filter_btn</string>
    <string name="description_filter_cancel_btn">filter_cancel_btn</string>
    <string name="description_send_btn">send_btn</string>
    <string name="requested">Friend requests</string>
    <string name="description_request_fold_imageview">request_fold_imageview</string>
    <string name="description_nickname_change_btn">nickname_change_btn</string>
    <string name="description_crown_imageview">crown_imageview</string>
    <string name="description_positive_btn">positive_btn</string>
    <string name="description_">negative_btn</string>
    <string name="description_google_login_logo_image_view">google_login_logo_image_view</string>
    <string name="description_guest_login_image_view">guest_login_image_view</string>
    <string name="description_friend_btn">friend_btn</string>
    <string name="description_setting_btn">setting_btn</string>
    <string name="description_selected_card_imageview">selected_card_imageview</string>
    <string name="description_card_imageview">card_imageview</string>
    <string name="description_dash_line">dash_line</string>
    <string name="description_back_btn">back_btn</string>
    <string name="rule_shape">Shape = Circle, Triangle, Square</string>
    <string name="rule_color">Color = Red, Green, Blue</string>
    <string name="rule_number">Number = One, Two, Three</string>
    <string name="rule_shade">Shade = Outlined, Striped, Solid</string>
    <string name="description_correct_case_one">One different property (Color)</string>
    <string name="description_correct_case_two">Two different properties (Shape, Color)</string>
    <string name="description_correct_case_three">Three different properties (Color, Number, Shade)</string>
    <string name="description_correct_case_four">Four different properties</string>
    <string name="description_incorrect_case_one">Two solid shades exist X</string>
    <string name="description_incorrect_case_two">There are two blue cards X</string>
    <string name="finish">Finish</string>
    <string name="shuffle">Shuffle</string>
    <string name="empty_nickname">Set nickname</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="playing">Multiplaying</string>
    <string name="back_btn_twice">Press the Back button again to exit</string>
    <string name="back_btn_twice_room">Press the Back button again to exit room</string>
    <string name="back_btn_twice_main_menu">Press the Back button again to return to the main menu</string>
    <string name="login_failed">Login failed</string>
    <string name="connection_successful">Connection successful</string>
    <string name="connection_failure">Connection failure</string>
    <string name="enter_code">Please enter the code</string>
    <string name="check_code">Please check the code</string>
    <string name="already_start">Unable to participate because the game has already started</string>
    <string name="full_room">Unable to participate because the maximum number of people is exceeded</string>
    <string name="new_game">New Game</string>
    <string name="set_nickname_finish">Nickname settings are complete</string>
    <string name="set_nickname_different">can\'t change to the same nickname</string>
    <string name="set_nickname_used">This nickname is already in use</string>
    <string name="set_nickname_blank">Nickname can\'t be blank</string>
    <string name="friend_status">Friend (</string>
    <string name="friend_request_self">You can\'t ask yourself for a friend</string>
    <string name="friend_request_complete">Friend request completed</string>
    <string name="friend_request_null">The nickname you entered does not exist</string>
    <string name="delete_friend_confirm">Do you want to delete\n\"%1$s\" from your friend?</string>
    <string name="delete_friend_complete">\"%1$s\" was removed from the friend list</string>
    <string name="invitation_complete">Your invitation is complete</string>
    <string name="invitation_already">You have already invited this player</string>
    <string name="invitation_another">This player has already been invited to another game</string>
    <string name="invitation_maximum">Unable to invite more than maximum number of people</string>
    <string name="friend_request_accepted">Friend request accepted</string>
    <string name="friend_request_declined">Friend request declined</string>
    <string name="cancel">Cancel</string>
    <string name="game_start">Game Start</string>
    <string name="game_leave_lose">If you go out during the game, you lose</string>
    <string name="no_player">You can\'t play the game because there are no players left</string>
    <string name="no_combination">Shuffle the cards because there is no possible combination</string>
    <string name="no_card">There are no cards left</string>
    <string name="time_second">s</string>
    <string name="time_minute">m</string>
    <string name="time_hour">h</string>
    <string name="singleplay_result">You got %1$s correct\nin %2$s!</string>
    <string name="singleplay_result_score_highlight">%1$s</string>
</resources>