<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting"
        android:textSize="23sp"
        android:textColor="@color/dialog_title_text"
        android:paddingVertical="20dp"
        android:fontFamily="@font/bm_jua"
        android:gravity="center"
        android:background="@color/dialog_title_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingHorizontal="60dp"
        android:paddingTop="40dp"
        android:paddingBottom="50dp"
        android:background="@color/dialog_text_bg">

        <Button
            android:id="@+id/dialog_setting_my_profile"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_bg"
            android:text="@string/my_profile"
            android:textSize="20sp"
            android:fontFamily="@font/bm_jua"
            android:textColor="@color/btn_text_color"
            android:paddingHorizontal="30dp"
            android:paddingVertical="20dp"
            android:visibility="visible"
            />

        <Button
            android:id="@+id/dialog_setting_connect_google_account"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_bg"
            android:text="@string/connect_google_account"
            android:textSize="20sp"
            android:fontFamily="@font/bm_jua"
            android:textColor="@color/btn_text_color"
            android:paddingHorizontal="30dp"
            android:paddingVertical="20dp"
            android:visibility="gone"
            tools:visibility="visible"
            />

        <Button
            android:id="@+id/dialog_setting_logout"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_bg"
            android:text="@string/logout"
            android:textSize="20sp"
            android:fontFamily="@font/bm_jua"
            android:textColor="@color/btn_text_color"
            android:paddingHorizontal="30dp"
            android:paddingVertical="20dp"
            />

    </LinearLayout>

</LinearLayout>