<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_nickname"
        android:textSize="23sp"
        android:textColor="@color/dialog_title_text"
        android:paddingVertical="20dp"
        android:fontFamily="@font/bm_jua"
        android:gravity="center"
        android:background="@color/dialog_title_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingHorizontal="60dp"
        android:paddingTop="40dp"
        android:paddingBottom="50dp"
        android:background="@color/dialog_text_bg">

        <EditText
            android:id="@+id/dialog_set_nickname_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:hint="@string/make_nickname_hint"
            android:maxLines="1"
            android:maxLength="10"
            android:gravity="center"
            android:background="@null"
            android:fontFamily="@font/bm_jua"
            android:textSize="24sp"
            android:paddingVertical="20dp"
            android:inputType="text"
            android:importantForAutofill="no"
            />

        <Button
            android:id="@+id/dialog_set_nickname_confirm_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_bg"
            android:text="@string/confirm"
            android:textSize="20sp"
            android:fontFamily="@font/bm_jua"
            android:textColor="@color/btn_text_color"
            android:paddingHorizontal="30dp"
            android:paddingVertical="20dp"
            />

    </LinearLayout>

</LinearLayout>