<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/single_play"
        android:textSize="23sp"
        android:textColor="@color/dialog_title_text"
        android:paddingVertical="20dp"
        android:fontFamily="@font/bm_jua"
        android:gravity="center"
        android:background="@color/dialog_title_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingHorizontal="60dp"
        android:paddingTop="40dp"
        android:paddingBottom="50dp"
        android:background="@color/dialog_text_bg">

        <Button
            android:id="@+id/dialog_play_single_continue_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_bg"
            android:text="@string/continue_set"
            android:textSize="20sp"
            android:fontFamily="@font/bm_jua"
            android:textColor="@color/btn_text_color"
            android:paddingHorizontal="30dp"
            android:paddingVertical="20dp"
            android:layout_marginBottom="30dp"
            android:visibility="gone"
            />

        <Button
            android:id="@+id/dialog_play_single_new_game_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_bg"
            android:text="@string/play_set"
            android:textSize="20sp"
            android:fontFamily="@font/bm_jua"
            android:textColor="@color/btn_text_color"
            android:paddingHorizontal="30dp"
            android:paddingVertical="20dp"
            />

    </LinearLayout>

</LinearLayout>