<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_start_order"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/set_bg"
    tools:context="com.pnlkc.set.MainMenuFragment">

    <ImageView
        android:id="@+id/friend_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/main_menu_etc_btn_bg"
        android:src="@drawable/friend_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="20dp"
        android:padding="6dp"
        android:clickable="true"
        android:contentDescription="@string/description_friend_btn" />

    <TextView
        android:id="@+id/friend_request_count"
        android:layout_width="22dp"
        android:layout_height="22dp"
        tools:text="1"
        android:fontFamily="@font/bm_jua"
        android:textSize="15sp"
        android:textColor="@color/btn_text_color"
        android:gravity="center"
        android:background="@drawable/btn_bg"
        app:layout_constraintTop_toTopOf="@id/friend_btn"
        app:layout_constraintBottom_toBottomOf="@id/friend_btn"
        app:layout_constraintStart_toStartOf="@id/friend_btn"
        app:layout_constraintEnd_toEndOf="@id/friend_btn"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:visibility="gone"
        />


    <ImageView
        android:id="@+id/setting_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/main_menu_etc_btn_bg"
        android:src="@drawable/setting_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="20dp"
        android:padding="6dp"
        android:clickable="true"
        android:contentDescription="@string/description_setting_btn" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie_animation_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="100dp"
        android:layout_marginHorizontal="50dp"
        app:lottie_rawRes="@raw/card_game"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/setting_btn"
        app:layout_constraintBottom_toTopOf="@id/menu_linear_layout"
        />

    <LinearLayout
        android:id="@+id/menu_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginHorizontal="100dp"
        android:layout_marginBottom="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lottie_animation_view"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/multi_game_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/play_multi"
            android:textColor="@color/btn_text_color"
            android:textSize="21sp"
            android:fontFamily="@font/bm_jua"
            android:background="@drawable/btn_bg"
            />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/single_game_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/play_single"
            android:textColor="@color/btn_text_color"
            android:textSize="21sp"
            android:fontFamily="@font/bm_jua"
            android:background="@drawable/btn_bg"
            />

        <Button
            android:id="@+id/rule_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:text="@string/rule_btn"
            android:textColor="@color/btn_text_color"
            android:textSize="21sp"
            android:fontFamily="@font/bm_jua"
            android:background="@drawable/rule_btn_bg" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>